Reimplement Key struct to make exploit script more easier

--- a/CryPtown/.vscode/settings.json
+++ b/CryPtown/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "base64.h": "c",
-        "utils.h": "c"
+        "utils.h": "c",
+        "cryptown.h": "c"
     }
 }
